--- a/manager/package.json
+++ b/manager/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.4",
     "express": "^4.15.4",
     "sequelize": "^4.6.0",
     "sqlite3": "^3.1.9"
