--- a/manager/package.json
+++ b/manager/package.json
@@ -9,7 +9,6 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "sequelize": "^4.6.0",
-    "sqlite3": "^3.1.9"
+    "sequelize": "^4.6.0"
   }
 }
