--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -15,7 +15,7 @@ storage:
   volumes:
     - /tmp/tftpboot/:/app/tftpboot/
     - "$PWD:/app"
-    - /var/run/docker.sock:/var/run/docker.sock
+    - docker:/var/lib/docker
   working_dir: /app
   entrypoint: sh start.sh 
   tty: true
