--- a/storage/docker-compose.yml
+++ b/storage/docker-compose.yml
@@ -1,21 +1,25 @@
-tftp:
-  image: jumanjiman/tftp-hpa
-  ports:
-    - "69:69"
-  volumes:
-    - /tmp/tftpboot/:/tftpboot/
-  entrypoint: /bin/sh
-  tty: true
-
-storage:
-  build: .
-  privileged: true
-  ports:
-    - "8080:8080"
-  volumes:
-    - /tmp/tftpboot/:/app/tftpboot/
-    - "$PWD:/app"
-    - docker:/var/lib/docker
-  working_dir: /app
-  entrypoint: sh start.sh 
-  tty: true
+version: "3"
+services:
+  tftp:
+    image: jumanjiman/tftp-hpa
+    ports:
+      - "69:69"
+    volumes:
+      - /tmp/tftpboot/:/tftpboot/
+    entrypoint: /bin/sh
+    tty: true
+  storage:
+    build:
+      context: .
+    privileged: true
+    ports:
+      - "8080:8080"
+    volumes:
+      - /tmp/tftpboot/:/app/tftpboot/
+      - ./:/app
+      - docker:/var/lib/docker
+    working_dir: /app
+    entrypoint: sh start.sh 
+    tty: true
+volumes:
+  docker: {}
