--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:8.4-alpine
 
 ADD . .
-RUN npm install && (cd webpack && npm install)
+RUN npm install && (cd webpack && npm install) && rm -rf webpack
 
 ENV PORT=8080
 EXPOSE 8080
