Using environment PORT

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,6 @@ services:
     ports:
         - 3000:3000
     environment:
+      PORT: 3000
       OUTPUT_DIR: /tftpboot/
       MOBY_DIR: /tmp/moby
