--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,8 @@ services:
     build: dhcpd
     network_mode: host
     environment:
-      API_URL: unix://run/manager.sock/api
+      API_URL: http://manager:8080/api
+      API_SOCKET: /run/manager.sock
       DHCP_SERVER_IP_ADDR: 172.17.4.2
       DHCP_START_IP_ADDR: 172.17.4.100
       DHCP_LEASE_RANGE: 150
