--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,26 +39,27 @@ services:
       - 67:67/udp
     volumes:
       - run:/run:ro
-  tftp:
-    image: jumanjiman/tftp-hpa
-    ports:
-      - 69:69/udp
-    volumes:
-      - /tmp/tftpboot:/tftpboot
-    entrypoint: /bin/sh
-    tty: true
-  moby:
-    build: moby
+  storage:
+    build: storage
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - /usr/bin/docker:/usr/bin/docker:ro
-      - /tmp:/tmp
-      - /tmp/tftpboot:/tftpboot
+      - ./moby:/tmp/moby
+      - ./images:/images
     ports:
-        - 3000:3000
+        - 3000
     environment:
       PORT: 3000
-      OUTPUT_DIR: /tftpboot/
-      MOBY_DIR: /tmp/moby
+      OUTPUT_DIR: /images
+      TEMPORARY_DIR: /tmp/moby
+  tftpd:
+    build: tftpd
+    environment:
+      TFTP_ROOT: /images:ro
+    ports:
+      - 69:69/udp
+    volumes:
+      - ./images:/images
+    entrypoint: tail -f /dev/null
 volumes:
   run:
