--- a/manager/package.json
+++ b/manager/package.json
@@ -6,6 +6,7 @@
   "author": "kstm@shinshu-u.ac.jp",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
