--- a/storage/Dockerfile
+++ b/storage/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:1.8-alpine
 RUN apk add --update --no-cache git musl-dev gcc ca-certificates
-ADD . $GOPATH/src/github.com/kstm-su/ool-specialist-2017/moby
-WORKDIR $GOPATH/src/github.com/kstm-su/ool-specialist-2017/moby
+WORKDIR $GOPATH/src/github.com/kstm-su/ztp/storage
+ADD . .
 RUN go get -v ./... && go build --ldflags '-s -w -linkmode external -extldflags -static' -o /storage
 
 FROM docker:latest
