--- a/dhcpd/Dockerfile
+++ b/dhcpd/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:1.8
-WORKDIR /usr/local/go/src/github.com/kstm-su/ool-specialist-2017/dhcpd
+WORKDIR /usr/local/go/src/github.com/kstm-su/ztp/dhcpd
 ADD . ./
 RUN go get ./... && go build --ldflags '-s -w -linkmode external -extldflags -static' -o /dhcpd
 
