--- a/dhcp/Dockerfile
+++ b/dhcp/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:1.8
-WORKDIR /usr/local/go/src/github.com/kstm-su/ztp/dhcpd
+WORKDIR /usr/local/go/src/github.com/kstm-su/ztp/dhcp
 ADD . ./
 RUN go get ./... && go build --ldflags '-s -w -linkmode external -extldflags -static' -o /dhcpd
 
