--- a/manager/package.json
+++ b/manager/package.json
@@ -10,6 +10,7 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
-    "sequelize": "^4.6.0"
+    "sequelize": "^4.6.0",
+    "sqlite3": "^3.1.10"
   }
 }
