--- a/manager/package.json
+++ b/manager/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.4",
     "express": "^4.15.4",
     "sequelize": "^4.6.0",
+    "socketio": "^1.0.0",
     "sqlite3": "^3.1.10"
   }
 }
