--- a/manager/webpack/package.json
+++ b/manager/webpack/package.json
@@ -32,6 +32,7 @@
     "npm": ">= 3.0.0"
   },
   "dependencies": {
+    "ajv": "^5.2.2",
     "axios": "^0.16.2",
     "vue-socket.io": "^2.1.1-a"
   }
