--- a/tftp/Dockerfile
+++ b/tftp/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.6
-RUN apk add --no-cache tftp-hpa syslinux
-ENV TFTP_ROOT=/var/tftpboot
+RUN apk add --no-cache rsyslog tftp-hpa syslinux
+ADD entrypoint.sh /entrypoint.sh
+ENV INTFTPD_PATH=/var/tftpboot
 EXPOSE 69/udp
-ENTRYPOINT ["in.tftpd"]
-CMD ["-L", "-v"]
+ENTRYPOINT ["/entrypoint.sh"]
