--- a/tftp/Dockerfile
+++ b/tftp/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.6
 RUN apk add --no-cache rsyslog tftp-hpa syslinux
 ADD entrypoint.sh /entrypoint.sh
-ENV INTFTPD_PATH=/var/tftpboot
+ENV TFTP_ROOT=/var/tftpboot
 EXPOSE 69/udp
 ENTRYPOINT ["/entrypoint.sh"]
