Move mutable variables to .env file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       NODE_MODULE: pg
       STORAGE_URL: http://storage:3000
     ports:
-      - 8080
+      - "${MANAGER_PORT}:8080"
     volumes:
       - ./tmp/run:/run
   db:
@@ -23,13 +23,13 @@ services:
     image: kstm/ztp:dhcp
 #   build: dhcp
     network_mode: host
+    env_file: .env
     environment:
       API_URL: http://manager:8080/api
       API_SOCKET: /run/manager.sock
       DHCP_SERVER_IP_ADDR: 192.168.100.1
       DHCP_START_IP_ADDR: 192.168.100.2
       DHCP_LEASE_RANGE: 50
-      DHCP_INTERFACE: ens192
       DHCP_OPTIONS: |
         SubnetMask: 255.255.255.0
         Router:
@@ -50,7 +50,7 @@ services:
       - ./tmp/moby:/tmp/moby
       - ./images:/images
     ports:
-        - 3000
+      - "${STORAGE_PORT}:3000"
     environment:
       PORT: 3000
       API_URL: http://manager:8080/api
