--- a/manager/standby.conf
+++ b/manager/standby.conf
@@ -14,16 +14,14 @@ services:
     image: linuxkit/getty:797cb79e0a229fcd16ebf44a0da74bcec03968ec
     env:
      - INSECURE=true
-  - name: nginx
-    image: nginx:alpine
-    capabilities:
-     - CAP_NET_BIND_SERVICE
-     - CAP_CHOWN
-     - CAP_SETUID
-     - CAP_SETGID
-     - CAP_DAC_OVERRIDE
+  - name: standby
+    image: ugwis/standby
+    env:
+     - DHCP_START_IP_ADDR=${start_ip}
+     - DHCP_LEASE_RANGE=${lease_range}
+     - MANAGER_URL=http://${manager_addr}
 trust:
   org:
     - linuxkit
   image:
-    - nginx:alpine
+    - ugwis/standby
