--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,12 @@ before_install:
   # Check version of installed docker-compose
   - docker-compose --version
 
+  # Copy environment file
+  - cp .env{.sample,}
+
   # Setup your application stack. You may need to tweak these commands if you
   # doing out-of-the-ordinary docker-compose builds.
   - docker-compose pull
-
-  - cp .env{.sample,}
 
 script:
   - docker-compose up --build
