--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - docker-compose pull
 
 script:
-  - docker-compose up --build
+  - docker-compose build
 
 after_script:
   - docker-compose down
