Change owner from ugwis to kstm organization

--- a/manager/standby.conf
+++ b/manager/standby.conf
@@ -15,7 +15,7 @@ services:
     env:
      - INSECURE=true
   - name: standby
-    image: ugwis/standby
+    image: kstm/ztp:standby
     env:
      - DHCP_START_IP_ADDR=${start_ip}
      - DHCP_LEASE_RANGE=${lease_range}
@@ -24,4 +24,4 @@ trust:
   org:
     - linuxkit
   image:
-    - ugwis/standby
+    - kstm/ztp:standby
