--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -1,12 +1,10 @@
 FROM node:8.4-alpine
 
-ADD ./package.json ./package.json
-ADD ./webpack/package.json ./webpack/package.json
-RUN yarn install && cd webpack && yarn install
-ADD . .
-RUN cd webpack && npm run build && cd .. && rm -rf webpack
+ADD . /manager
+WORKDIR /manager
+RUN yarn install && cd webpack && yarn install && yarn run build && cd .. && rm -rf webpack
 
 ENV PORT=8080
 EXPOSE 8080
 
-CMD ["./entrypoint.sh"]
+CMD ["/manager/entrypoint.sh"]
